# ais-bonn-ros-pkg

./: ProjectHome.md
stacks/ais_bonn_drivers/: stack.xml
stacks/ais_bonn_drivers/roomrider_driver/: cmake_install.cmake  manifest.xml
stacks/ais_bonn_drivers/roomrider_driver/config/: local_costmap_params.yaml
stacks/ais_bonn_drivers/roomrider_driver/include/: roomba_comms.h
stacks/ais_bonn_drivers/roomrider_driver/launch/: roomrider_test.launch
stacks/ais_bonn_drivers/roomrider_driver/msg/: Led.msg
stacks/ais_bonn_drivers/roomrider_driver/src/: roomba_comms.c  roomrider_driver.cpp  roomrider_test.cpp
stacks/ais_bonn_pcl_addons/: stack.xml
stacks/ais_bonn_pcl_addons/octreelib/: CMakeLists.txt  mainpage.dox  manifest.xml  normalestimation_rviz.vcg
stacks/ais_bonn_pcl_addons/octreelib/include/octreelib/algorithm/: downsample.h
stacks/ais_bonn_pcl_addons/octreelib/include/octreelib/feature/: normalestimation.h
stacks/ais_bonn_pcl_addons/octreelib/include/octreelib/ros/: multiresolution_feature.h  normalestimation_nodelet.h
stacks/ais_bonn_pcl_addons/octreelib/include/octreelib/spatialaggregate/: octree.h
stacks/ais_bonn_pcl_addons/octreelib/include/octreelib/spatialaggregate/impl/: octree.hpp
stacks/ais_bonn_pcl_addons/octreelib/src/octreelib/feature/: normalestimation.hpp
stacks/ais_bonn_pcl_addons/octreelib/src/octreelib/ros/: multiresolution_feature.cpp  normalestimation_nodelet.cpp
stacks/ais_bonn_pcl_addons/octreelib/src/octreelib/spatialaggregate/: octree.hpp
stacks/ais_bonn_pcl_addons/octreelib/test/: test_normalestimation.cpp  test_octree.cpp
trunk/roomrider/: CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml
trunk/roomrider/config/: base_local_planner_params.yaml
trunk/roomrider/include/: roomba_comms.h  roomba_driver.h  roomba_test.h  serialcomm_s300.h  sicks300.h
trunk/roomrider/launch/: roomrider.launch  roomriderTest.launch
trunk/roomrider/msg/: Infrared.msg
trunk/roomrider/src/: roomba_comms.c  roomba_driver.cpp  roomba_test.cpp  serialcomm_s300.cpp  sicks300.cpp
trunk/stacks/ais_bonn_drivers/: CMakeLists.txt
trunk/stacks/ais_bonn_drivers/include/: roomrider_test.h
trunk/stacks/ais_bonn_drivers/mocap_optitrack/config/: mocap.yaml
trunk/stacks/ais_bonn_drivers/mocap_optitrack/launch/: mocap.launch
trunk/stacks/ais_bonn_drivers/msg/: Infrared.msg
trunk/stacks/ais_bonn_drivers/roomrider_driver/: manifest.xml
trunk/stacks/ais_bonn_drivers/roomrider_driver/config/: costmap_common_params.yaml
trunk/stacks/ais_bonn_drivers/roomrider_driver/include/: roomrider_driver.h
trunk/stacks/ais_bonn_drivers/roomrider_driver/launch/: roomrider.launch
trunk/stacks/ais_bonn_pcl_addons/: stack.xml
trunk/stacks/ais_bonn_pcl_addons/octreelib/: CMakeLists.txt  manifest.xml
trunk/stacks/ais_bonn_pcl_addons/octreelib/include/octreelib/algorithm/: downsample.h
trunk/stacks/ais_bonn_pcl_addons/octreelib/include/octreelib/ros/: normalestimation_nodelet.h
trunk/stacks/ais_bonn_pcl_addons/octreelib/include/octreelib/spatialaggregate/: octree.h
trunk/stacks/ais_bonn_pcl_addons/octreelib/include/octreelib/spatialaggregate/impl/: octree.hpp
trunk/stacks/ais_bonn_pcl_addons/octreelib/launch/: normalestimation_nodelet.launch
trunk/stacks/ais_bonn_pcl_addons/octreelib/src/octreelib/algorithm/: downsample.hpp
trunk/stacks/ais_bonn_pcl_addons/octreelib/src/octreelib/feature/: normalestimation.hpp
trunk/stacks/ais_bonn_pcl_addons/octreelib/src/octreelib/ros/: multiresolution_feature.cpp  normalestimation_nodelet.cpp
trunk/stacks/ais_bonn_pcl_addons/octreelib/src/octreelib/spatialaggregate/: octree.hpp
trunk/stacks/ais_bonn_pcl_addons/octreelib/test/: test_normalestimation.cpp  test_octree.cpp
(+3 files in other folders)
